--- a/src/index.css
+++ b/src/index.css
@@ -8,8 +8,8 @@ html {
   color: white !important;
 }
 body {
-  min-width: 100vw;
-  min-height: 100vh;
+  max-width: 100vw;
+  max-height: 100vh;
 }
 
 @layer base {
