--- a/src/index.css
+++ b/src/index.css
@@ -11,6 +11,11 @@ body {
   max-width: 100vw;
   max-height: 100vh;
 }
+.font-container {
+  font-family: "DM Sans", sans-serif;
+  font-optical-sizing: auto;
+  font-style: normal;
+}
 
 @layer base {
   :root {
